src/style.css
/* ... */
.toggle-on .glow-comp{
  opacity: 1;
  -webkit-transition: opacity 1s;
  transition: opacity 1s;
}

table{
  width:100%;
  table-layout: fixed;
}
.table_tool{
  border-radius: 15px;
  margin: 15px;
  overflow:hidden;
  backdrop-filter: blur(6px);
  background-color: rgba(122, 122, 122, 0.144);
}
.tbl-content{
  height:325px;
  overflow-x:auto;
  /* overflow-y: scroll; */
}
tr{
  line-height: 5px;
}
th{
  padding: 20px 15px;
  text-align: left;
  font-weight: 500;
  font-size: 12px;
  color: #fff;
  text-transform: uppercase;
  user-select: none;
}
td{
  padding: 15px;
  text-align: left;
  vertical-align:middle;
  font-weight: 300;
  font-size: 12px;
  color: #fff;
  border-bottom: solid 1px rgba(255,255,255,0.1);
  -webkit-app-region: none;
}
tr th:nth-child(2),
tr th:nth-child(3),
tr td:nth-child(2),
tr td:nth-child(3) {
  text-align: center;
}

.sortStyle { cursor: pointer; }

.ascStyle {
  background-image: url(img/asc.gif);
  background-repeat: no-repeat;
  background-position: center right;
}

.descStyle {
  background-image: url(img/desc.gif);
  background-repeat: no-repeat;
  background-position: center right;
}

.unsortStyle {
  background-image: url(img/bg.gif);
  background-repeat: no-repeat;
  background-position: center right;
}

::-webkit-scrollbar {
  width: 6px;
} 
::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgb(0, 0, 0); 
} 
::-webkit-scrollbar-thumb {
  -webkit-box-shadow: inset 0 0 6px rgba(109, 109, 109, 0.788); 
}

.dragAndDropArea{
  position: absolute;
  border-radius: 15px;
  top: 50px;
  margin: 15px;
  height: 370px;
  width: 970px;
  background-color: #3030304f;
  backdrop-filter: blur(6px);
  pointer-events: inherit;
  display: flex;
  justify-content: center;
  align-items: center;
}

.white_text_center{
  position: fixed;
  top: 35%;
  color:rgb(71, 71, 71);
  font-family: 'Courier New';
  pointer-events: none;
}

.dragIN{
  background-color: #5e5e5e4f;
  transition: all .1s ease-in;
}

.dragIN .white_text_center{
  color:rgb(104, 103, 103);
  transition: all .1s ease-in;
}

.hidden{
  opacity: 0;
}
.elastic_transition{
  transition: all .3s ease-in;
}

